# research-agent

./: .gitignore  LICENSE  README.md  pyproject.toml  requirements.txt
src/research-agent/core/: config.py  logging.py  types.py
src/research-agent/discovery/: __init__.py
