[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "research-workflow-agent"
version = "0.1.0"
description = "Modular AI assistant for literature discovery, parsing, summarization, and retrieval"
authors = [{ name = "Your Name" }]
requires-python = ">=3.10"
dependencies = [
  "arxiv>=2.1.0",
  "httpx>=0.27.0",
  "pydantic>=2.7.0",
  "pydantic-settings>=2.2.1",
  "tenacity>=8.2.3",
  "typer>=0.12.3",
  "rich>=13.7.1",
  "python-dotenv>=1.0.1"
]

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]

[tool.ruff]
line-length = 100
select = ["E", "F", "I", "UP"]